# python-aws-dataclasses

./: .gitignore  .pypirc  .travis.yml  CHANGES  CHANGES.rst  CODEOWNERS  HISTORY.md  Makefile  Pipfile  README.md  README.rst  coverage.cfg  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
aws_dataclasses/: __init__.py  alexa_skill_event.py  base.py  cf_event.py  cloudwatch_alarm.py  cloudwatch_event.py  http_proxy_event.py  kinesis_datastream_event.py  lambda_function_configuration.py  log.py  s3_event.py  sns_event.py  util.py
aws_dataclasses/test/: test_alexaskill_event.py  test_apigw_proxy_event.py  test_cf_event.py  test_s3_event.py  test_sns_event.py
aws_dataclasses/test/resources/: context.json
lawip/: alexa_skill_event.py  http_proxy_event.py  s3_event.py  sns_event.py
lawip/test/: test_alexaskill_event.py  test_apigw_proxy_event.py  test_cf_event.py  test_s3_event.py  test_sns_event.py  util.py
lawip/test/resources/: alexa-event.json  cf_request_event.json  cf_response_event.json
tests/: test_alexaskill_event.py  test_apigw_proxy_event.py  test_cf_event.py  test_cloudwatch_alarm.py  test_cloudwatch_event.py  test_kinesis_data_stream_event.py  test_lambda_list_functions.py  test_s3_event.py  test_sns_event.py
tests/resources/: apigw-proxy-event.json  cloudwatch_alarm.json  cloudwatch_event.json  function_configuration.json  kinesis-datastream-event.json  sns-event.json  sns-message.json
